# UrlShortener

backend/: Cargo.toml  diesel.toml
backend/migrations/2025-06-02-060429_urlShortener/: up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/models/: url.rs
backend/src/routes/: create_route.rs  get_route.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/api/: ShortUrl.ts
frontend/src/app/: page.tsx
frontend/src/components/: ShortUrl.tsx
